# python-event-driven-framework

./: Readme.md  pyproject.toml  requirements.txt
framework/: event.py  event_listener.py  handlers.py  middlewares.py  pruebas.py  publisher.py
framework/errors/: exceptions.py
framework/loggingg/: config.py
py-events/: __init__.py  event.py  handler.py  publisher.py  subscribers.py
py-events/errors/: __init__.py  exceptions.py
py-events/singleton/: singleton.py
